export class DeviceRegistryClient {
  // Stub: would fetch device details in future
  async exists(_deviceId: string): Promise<boolean> {
    return true;
  }
}


