export class MessageBusClient {
  async publishCommand(_topic: string, _message: unknown): Promise<void> {
    return;
  }
}


