export class UserHousesClient {
  // Stub: would call User & Houses in future
  async isDeviceOwnedByUser(
    _userId: string | undefined,
    _deviceId: string
  ): Promise<boolean> {
    return true;
  }
}
